# pilauncher

./: .env  .gitignore  README.md  eslint-output.txt  index.html  macOS_build_fix_zh.md  package.json  pnpm-lock.yaml  raw.json  replace.js  tailwind.config.js  translation_cache.json  update_i18n.cjs  vite.config.ts
docs/: BasicPanel解耦合.md  DataSettings解耦合方案.md  MOD图标缓存方案.md  Minecraft日志分享系统设计文档.md  Mod 快照与回滚系统设计文档.md  ModList样式重构设计文档.md  ModList组件解耦重构方案.md  SteamDeck_Performance_Analysis.md  UI多端适配建议.md  Wardrobe.tsx解耦合文档.md  android_porting_analysis.md  architecture.md  auth_service_decoupling_plan.md  backend-architecture.md  backupsjson.md  demo.html  dev_startup_performance_analysis.md  download_manager_ui_optimization.md  download_performance_optimization_plan.md  download_ui_ux_analysis.md  downloader_improvement_plan.md  export_manifest_issue_analysis.md  export_ui_ux_analysis.md  friends-list-rust-design.md  frontend_decoupling_proposal.md  game_core_download_fix_proposal.md  instance_deployment_optimization.md  (+44 more)
src-tauri/: .gitignore  Cargo.toml  build.rs  check_errors.txt  check_out.txt  tauri.conf.json
src-tauri/binaries/: port.json
src-tauri/capabilities/: default.json
src-tauri/dispatch2-0.3.1/src/: lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  test_parse_loader.rs
src-tauri/src/commands/: animation_cmd.rs  auth_cmd.rs  cache_cmd.rs  config_cmd.rs  download_benchmark_cmd.rs  fs_cmd.rs  java_cmd.rs  lan_cmd.rs  launcher_cmd.rs  library_cmd.rs  loader_cmd.rs  logshare_cmd.rs  minecraft_cmd.rs  mod.rs  modpack_cmd.rs  network_cmd.rs  qrcode_cmd.rs  resource_cmd.rs  runtime_cmd.rs  settings_cmd.rs  social_cmd.rs  system_cmd.rs  telemetry_cmd.rs  terracotta.rs  translation_cmd.rs  update_cmd.rs  wiki_cmd.rs
src-tauri/src/commands/instance/: action_cmd.rs  bind_cmd.rs  creation_cmd.rs  keymap_cmd.rs  listing_cmd.rs  mod.rs  mod_cmd.rs  resource_cmd.rs  save_cmd.rs  snapshot_cmd.rs
src-tauri/src/domain/: animation.rs  auth.rs  event.rs  gamepad.rs  instance.rs  lan.rs  launcher.rs  library.rs  loader.rs  manifest.rs  minecraft.rs  minecraft_json.rs  mod.rs  mod_manifest.rs  modpack.rs  resource.rs  runtime.rs
src-tauri/src/services/: animation_service.rs  auth_service.rs  config_service.rs  db_service.rs  deferred_startup.rs  deployment_cancel.rs  file_write_lock.rs  gamepad_service.rs  library_service.rs  loader_service.rs  logshare_history_service.rs  logshare_service.rs  minecraft_service.rs  mod.rs  modpack_service.rs  playtime.rs  qrcode_service.rs  resource_service.rs  runtime_service.rs  social_service.rs  telemetry_service.rs  terracotta.rs  wiki_service.rs
src-tauri/src/services/auth/: authlib.rs  http.rs  microsoft.rs  minecraft.rs  mod.rs  offline.rs  paths.rs  skin_png.rs  wardrobe.rs  xbox.rs
src-tauri/src/services/downloader/: README.md  core_installer.rs  dependencies.rs  loader_installer.rs  logging.rs  mod.rs  transfer.rs
src-tauri/src/services/downloader/dependencies/: assets.rs  game_core.rs  libraries.rs  mirror.rs  mod.rs  progress.rs  scheduler.rs
src-tauri/src/services/downloader/loader_installer/: fabric.rs  forge.rs  neoforge.rs  quilt.rs
src-tauri/src/services/import_service/: local_instance_service.rs  mod.rs  third_party_service.rs
src-tauri/src/services/instance/: action.rs  backup_service.rs  binding.rs  creation.rs  environment.rs  listing.rs  manifest_builder.rs  mod.rs  mod_manager.rs  mod_manifest_service.rs  mod_snapshot_manager.rs  resource_manager.rs  save_manager.rs  tag.rs  verify_service.rs
src-tauri/src/services/lan/: http_api.rs  mdns_service.rs  mod.rs  transfer_records.rs  transfer_service.rs  trust_store.rs
src-tauri/src/services/launcher/: auth.rs  builder.rs  mod.rs  pre_launch_check.rs  resolver.rs
src-tauri/src/services/launcher/builder/: args.rs  natives.rs  rules.rs  version_chain.rs
src-tauri/src/services/modpack_service/: README.md  download.rs  export.rs  logging.rs  logic.rs  mod.rs  ops.rs  orchestrator.rs  rollback.rs  upgrade.rs
src-tauri/src/services/webdav_sync_service/: compaction.rs  constants.rs  keymaps.rs  local_store.rs  migration.rs  mod.rs  models.rs  paths.rs  remote.rs  snapshot.rs  state.rs  util.rs
(+468 files in other folders)
