[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"

uuid = { version = "1", features = ["v4", "serde"] }
zip = "0.6"
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "macros"
] }
reqwest = { version = "0.11", features = [
  "json",
  "stream",
  "rustls-tls"
] }
chrono = "0.4.44"
regex = "1.10"
once_cell = "1"
futures = "0.3.32"
font-kit = "0.14"
sysinfo = "0.30"
walkdir = "2.4"
