[package]
name = "PiLauncher"
version = "0.1.0"
description = "A Minecraft Launcher"
authors = ["mrshell"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tokio = { version = "1.36", features = ["full", "rt-multi-thread", "sync"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
md5 = "0.7.0"
sha1 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
zip = "8.2.0"
tar = "0.4"
flate2 = "1.0"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "macros"
] }
reqwest = { version = "0.11", features = [
  "json",
  "stream",
  "rustls-tls"
] }
chrono = "0.4.44"
regex = "1.10"
once_cell = "1"
futures = "0.3.32"
font-kit = "0.14"
sysinfo = "0.38.3"
walkdir = "2.4"
base64 = "0.22.1"
mdns-sd = "0.14"
axum = { version = "0.8.8", features = ["ws"] }
tower-http = { version = "0.6.8", features = ["cors"] }

ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand_core = { version = "0.9.0", features = ["std"] }
rand = "0.9.0"
local-ip-address = "0.6.10"
qrcodegen = "1.8"
steam_shortcuts_util = "1.1.8"
steamlocate = "2.0.1"
gilrs = "0.10"
